hover on mobile, main page paddings fixes

--- a/sites/all/themes/econ/spbgu/app/css/main.css
+++ b/sites/all/themes/econ/spbgu/app/css/main.css
@@ -2013,7 +2013,7 @@ input[type="search"].spbgu-portal__search__input {
   transition: background-color 0.3s;
   border-bottom: 1px solid #e3e3e3;
 }
-.news-widget__item:hover {
+.news-widget__item:hover, .news-widget__item:focus {
   color: #2d2d2d;
   background: #cfcfcf;
 }
